# vector_search_playground

./: .gitignore  Cargo.toml  docker-compose.yaml
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20250414_131949_create_search.rs
src/: main.rs
