[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "1.1.10", features = [
  "postgres-vector",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "1.1.10", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-uuid",
  "with-chrono",
] }
