[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.16.0", features = ["zerocopy", "v7"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "1.1.10", features = [
  "postgres-vector",
  "sqlx-postgres",
  "with-uuid",
  "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "1.1.10", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-uuid",
  "with-chrono",
] }
